Fix indicator menu covering hamburger menu
Former-commit-id: 38b6675a0f1dc471ab7bde569478685bfee074c6

--- a/client/src/components/Header/Hamburger/HamburgerButton.css
+++ b/client/src/components/Header/Hamburger/HamburgerButton.css
@@ -15,7 +15,7 @@
 }
 
 .hamburger-button>.hamburger-button-line {
-    z-index: 10;
+    z-index: 20;
     width: 2rem;
     height: 0.25rem;
     background: white;
