--- a/client/src/components/Header/Hamburger/HamburgerMenu.css
+++ b/client/src/components/Header/Hamburger/HamburgerMenu.css
@@ -1,5 +1,5 @@
 .hamburger-menu {
-    z-index: 1;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
